# 3D-CG

./: .gitignore  DOCUMENTATION.md  debug_pairings.py  main.py  pyproject.toml  requirements.txt
api/: __init__.py
api/cli/: __init__.py  main.py
config/: default.yaml
data/: __init__.py
data/generators/: __init__.py  micro_airline.py  small_airline.py
gnn/: __init__.py
models/: __init__.py  crew.py  flight.py  legal_rules.py  network.py  pairing.py  solution.py
optimization/: __init__.py  column_generation.py  master_problem.py
optimization/subproblem/: __init__.py  base.py  exact_rcspp.py
tests/: __init__.py  conftest.py
tests/integration/: test_column_generation.py
tests/unit/: test_models.py
